<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="count"
            type="com.application.dsiadminpanel.dataClass.CountCoordinators" />

        <variable
            name="countCustomer"
            type="Integer" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".adminDashboardActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/adminDashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".adminDashboardActivity">

                    <Button
                        android:id="@+id/showPendingForm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/button_border"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/view_applications"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/countCoordinators"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/showPendingForm">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/showStateCoordinator"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginEnd="30dp"
                                android:background="@drawable/admin_dashboard_stats"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:id="@+id/countStateCoordinator"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@{String.valueOf(count.stateCoordinator)}"
                                    android:textSize="25sp" />

                                <TextView
                                    android:id="@+id/txtStateCoordinator"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/state" />

                                <TextView
                                    android:id="@+id/txtStateCoordinators"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@string/coordinator" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/showZoneCoordinator"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/admin_dashboard_stats"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:id="@+id/countZoneCoordinator"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@{String.valueOf(count.zoneCoordinator)}"
                                    android:textSize="25sp" />

                                <TextView
                                    android:id="@+id/txtZoneCoordinator"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/zone" />

                                <TextView
                                    android:id="@+id/txtZoneCoordinators"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@string/coordinator" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/showDistributor"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="30dp"
                                android:background="@drawable/admin_dashboard_stats"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:id="@+id/countDistributor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@{String.valueOf(count.distributor)}"
                                    android:textSize="25sp" />

                                <TextView
                                    android:id="@+id/txtDistributor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/distributor" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/showDistrictCoordinator"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/admin_dashboard_stats"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:id="@+id/countDistrictCoordinator"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@{String.valueOf(count.districtCoordinator)}"
                                    android:textSize="25sp" />

                                <TextView
                                    android:id="@+id/txtDistrictCoordinator"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/district" />

                                <TextView
                                    android:id="@+id/txtDistrictCoordinatos"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@string/coordinator" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/showBlockCoordinator"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginEnd="30dp"
                                android:background="@drawable/admin_dashboard_stats"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:id="@+id/countBlockCoordinator"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@{String.valueOf(count.blockCoordinator)}"
                                    android:textSize="25sp" />

                                <TextView
                                    android:id="@+id/txtBlockCoordinator"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/block" />

                                <TextView
                                    android:id="@+id/txtBlockCoordinators"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@string/coordinator" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/showNavPanchayat"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/admin_dashboard_stats"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <TextView
                                    android:id="@+id/countNavPanchayat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@{String.valueOf(count.navPanchayat)}"
                                    android:textSize="25sp" />

                                <TextView
                                    android:id="@+id/txtNavPanchayat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="10dp"
                                    android:text="@string/nav" />

                                <TextView
                                    android:id="@+id/txtNavPanchayats"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:text="@string/panchayat" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/showCustomers"
                            android:layout_width="230dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/admin_dashboard_stats"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/txtCustomer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/customer" />

                        </LinearLayout>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>