<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="email"
            type="String" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".generateEmployeeActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="80dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/background_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/txt_welcomeDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp"
                        android:text="@string/generate_employee_password"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <Button
                        android:id="@+id/btn_generateEmployee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/button_border_generate"
                        android:text="@string/generate_employee"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_confirmPassword" />

                    <TextView
                        android:id="@+id/edt_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/field_border"
                        android:drawableStart="@drawable/email_icon"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:gravity="center_vertical"
                        android:importantForAutofill="no"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:text="@{email}"
                        android:textAlignment="gravity"
                        android:textColor="@color/grey"
                        android:textColorHint="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_welcomeDesc" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/field_border"
                        android:drawableStart="@drawable/password_icon"
                        android:drawablePadding="13dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

                    <EditText
                        android:id="@+id/edt_confirmPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/field_border"
                        android:drawableStart="@drawable/password_icon"
                        android:drawablePadding="13dp"
                        android:ems="10"
                        android:hint="@string/confirm_pass"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:visibility="gone" />

            </FrameLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>